--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,9 @@ button {
 }
 
 .header-logo {
+    display:flex;
+    align-items: center;
+    gap:10px;
     color: #f9faf8;
     font-size: 24px;
     font-weight: bolder;
@@ -41,6 +44,7 @@ button {
     justify-content: space-between;
     color: white;
     padding: 20px 150px 0px 150px;
+    align-items: center;
 }
 
 .header-links {
